--- a/ansible-basics/2/playbook.yml
+++ b/ansible-basics/2/playbook.yml
@@ -21,4 +21,6 @@
         - restart apache
     handlers:
       - name: restart apache
-        service: name=apache state=restarted
+        service:
+          name: apache
+          state: restarted
