--- a/ansible-basics/1/ansible.cfg
+++ b/ansible-basics/1/ansible.cfg
@@ -1,8 +1,1 @@
-[defaults]
-# disable host-key checking. if you enable this,
-# auto-generated hosts (e.g. docker hosts) might ask to
-# verify identity.
-# http://stackoverflow.com/a/32338480/682912
-
-host_key_checking = false
-inventory = ../inventory
+# Create some ansible configuration here!
