--- a/ansible-basics/2/playbook.yml
+++ b/ansible-basics/2/playbook.yml
@@ -19,8 +19,8 @@
         - include
       notify:
         - restart apache
-    handlers:
-      - name: restart apache
-        service:
-          name: apache
-          state: restarted
+  handlers:
+    - name: restart apache
+      service:
+        name: apache2
+        state: restarted
