--- a/ansible-basics/3a/playbook.yml
+++ b/ansible-basics/3a/playbook.yml
@@ -1,6 +1,3 @@
 ---
-- hosts: group0
-  # Include a playbook that will run all of the tasks from exercise 2.
-
-- hosts: group1
-  # Include a playbook that will install mysql-server on the hosts in group1.
+- include: apache.yml
+- include: mysql.yml
