--- a/ansible-basics/3b/roles/apache/defaults/main.yml
+++ b/ansible-basics/3b/roles/apache/defaults/main.yml
@@ -1,2 +1,4 @@
 ---
 # defaults file for apache
+# Any variables used by the role can be defined here.
+# NOTE: VARIABLES DEFINED HERE HAVE LOWEST PRECEDENCE.
