--- a/ansible-basics/3b/roles/apache/handlers/main.yml
+++ b/ansible-basics/3b/roles/apache/handlers/main.yml
@@ -1,6 +1,3 @@
 ---
 # handlers file for apache
-- name: restart apache
-  service:
-    name: apache2
-    state: restarted
+# All the handlers for this role can be defined here.
