exercise 4: updated  answer

--- a/ansible-basics/4/roles/apache/tasks/main.yml
+++ b/ansible-basics/4/roles/apache/tasks/main.yml
@@ -12,6 +12,6 @@
   apache2_module:
     state: present
     name: "{{item}}"
-  with_items: apache_modules
+  with_items: "{{apache_modules}}"
   notify:
     - restart apache
