--- a/ansible-basics/5/ansible.cfg
+++ b/ansible-basics/5/ansible.cfg
@@ -5,4 +5,4 @@
 # http://stackoverflow.com/a/32338480/682912
 
 host_key_checking = false
-inventory = ./inventory
+inventory = ./inventories/vagrant-ssh/
